--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" ng-app="tutorialApp">
+<html lang="en" dir="ltr" ng-app="newApp">
   <head>
     <meta charset="utf-8">
     <title>Tutorial App</title>
-    <script src="lib/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/new-app.js"></script>
   </head>
   <body>
-    <div ng-controller="tutorialController">
+    <div ng-view>
+      <p><a href="#/!">Homepage</a></p>
 
-
+      <a href="#!tutorialSecond">Second Page - Tutorial</a>
+      <a href="#!tutorialThird">Third Page - Tutorial</a>
     </div>
   </body>
 </html>
