--- a/Grocery/index.html
+++ b/Grocery/index.html
@@ -13,8 +13,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!-- <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> -->
 
 </head>
 <body ng-controller="HomeController">
@@ -38,6 +38,7 @@
 <script src="lib/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="lib/bootstrap.min.js"></script>
+<script src="lib/underscore-min.js"></script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.js"></script>
 <script src="js/app.js"></script>
